syntax = "proto3";

package com.wheelseye.devicegateway;

option java_package = "com.wheelseye.devicegateway.protobuf";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "device.proto"; // Assuming IMEI is already defined here

// Represents a device session lifecycle event
message DeviceSessionEvent {
  string event_type = 1;          // Matches eventType
  string session_id = 2;          // Matches sessionId
  IMEI imei = 3;                  // Uses the IMEI type from device.proto
  string device_model = 4;        // Matches deviceModel
  string ip_address = 5;          // Matches ipAddress
  google.protobuf.Timestamp timestamp = 6;  // Matches Instant timestamp
  string protocol_version = 7;    // Matches protocolVersion
}
